# codrusCLI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  flake.nix  kimi.spec  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci-codrus-sdk.yml  ci-kimi-cli.yml  docs-pages.yml  release-kimi-cli.yml  release-kimi-sdk.yml
docs/: AGENTS.md  index.md  package.json
klips/: klip-0-klip.md  klip-1-codrus-cli-monorepo.md  klip-10-agent-flow.md  klip-11-codrus-code-rename.md  klip-12-wire-initialize-external-tools.md  klip-14-codrus-code-oauth-login.md  klip-15-kagent-sidecar-integration.md  klip-3-codrus-cli-user-docs.md  klip-6-setup-auto-refresh-models.md  klip-7-kimi-sdk.md  klip-8-config-and-skills-layout.md  klip-9-shell-ui-flicker-mitigation.md
scripts/: build_vis.py  build_web.py  check_kimi_dependency_versions.py  cleanup_tmp_sessions.py  inject_build_sha.py  install.ps1  install.sh
sdks/kimi-sdk/: NOTICE  README.md  pyproject.toml
sdks/kimi-sdk/tests/: test_smoke.py
tests/: conftest.py  test_additional_dirs_state.py  test_attachment_cache.py  test_clipboard.py  test_constant.py  test_git_context.py
tests_ai/: test_cli_loading_time.md  test_encoding_error_handling.md  test_utf8_encoding.md
tests_e2e/: AGENTS.md  test_mcp_cli.py  test_wire_approvals_tools.py  test_wire_errors.py  test_wire_protocol.py  wire_helpers.py
web/: index.html  openapi.json  package-lock.json  package.json
(+573 files in other folders)
